# cels-debug

./: CMakeLists.txt
.planning/: PROJECT.md  REQUIREMENTS.md  REVIEW-2026-02-08.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  RESEARCH.md
.planning/phases/02-tab-system-and-overview/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-entities-and-components/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/03.1-redesign-navigation-ecs-tabs/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-RESEARCH.md  03.1-VERIFICATION.md
.planning/phases/04-systems-and-pipeline/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: data_model.c  data_model.h  http_client.c  http_client.h  json_parser.c  json_parser.h  json_render.c  json_render.h  main.c  scroll.c  scroll.h  split_panel.c  split_panel.h  tab_system.c  tab_system.h  tree_view.c  tree_view.h  tui.c  tui.h
src/tabs/: tab_cels.c  tab_cels.h  tab_components.c  tab_components.h  tab_ecs.c  tab_ecs.h  tab_entities.c  tab_entities.h  tab_overview.c  tab_overview.h  tab_performance.c  tab_performance.h  tab_placeholder.c  tab_placeholder.h  tab_systems.c  tab_systems.h  tab_tests.c  tab_tests.h
(+11 files in other folders)
